# relog

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: relog-config.cmake.in  set_if_undefined.cmake  version.h.in  win_copy_deps_to_target_dir.cmake
examples/basic/: CMakeLists.txt  main.cpp
include/relog/: export.h  relog.h
src/: relog.cpp
tests/: CMakeLists.txt  dummy_test.cpp
